src/components/shared/Header/Header.module.sass
@import './src/styles/config'

$marginTop: 115px

.header
  position: relative
  height: 100vh
  padding-top: $marginTop
  @include overlayImage(linear-gradient(to top, $bg 0%, $bg 26%, rgba(39, 39, 39, 0.6) 100%), 1, 1)
  max-height: 1240px
  min-height: 800px
  overflow: hidden
  z-index: 0

  .socials
    display: flex
    flex-direction: column
    justify-content: flex-end
    position: absolute
    top: 0
    left: 0
    background-color: $gray5
    width: 365px
    height: 399px
    z-index: 5
    padding: 85px

    &::before
      content: ''
      display: block
      position: absolute
      top: 135px
      left: 95px
      background-color: $gray2
      height: 52px
      width: 1px

    &.small
      width: 188px
      height: 100%
      top: unset
      bottom: 0
      padding-bottom: 160px

      &::before
        top: unset
        bottom: 250px
        left: 50%
        transform: translateX(-50%)

      .socialsTitle
        white-space: nowrap
        color: $white
        font-size: 11px
        line-height: 1
        text-transform: uppercase
        letter-spacing: 12px
        writing-mode: vertical-lr
        text-orientation: mixed
        transform: rotate(180deg) translateX(22%)
        margin-bottom: 81px
        opacity: .7

    .socialIcon
      font-size: 18px
      margin-top: 25px
      color: $gray2
      cursor: pointer

  .bgcImg
    position: absolute !important
    top: 0
    left: 0
    width: 100%
    height: 100%
    background-position: center center
    background-size: cover
    background-repeat: no-repeat

  .headerWrap
    display: flex
    flex-direction: column
    align-items: flex-end
    position: relative
    z-index: 4
    color: $white
    padding-top: calc(18.5vw - #{$marginTop})

    h1,
    h2,
    h3,
    h4,
    h5,
    h6
      text-align: right
      margin: 0

  .sliderWrap
    position: absolute
    top: 0
    left: 0
    z-index: 4
    display: flex

    .sliderContent
      display: flex
      flex-direction: column
      align-items: flex-end
      z-index: 4
      width: 100%
      padding-top: 135px
      user-select: none

      .sliderTitle
        letter-spacing: 16px
        text-align: right
        margin: 0 -16px 45px 0
        padding: 0 0 0 220px

      .sliderDescription
        color: $white
        text-align: right
        padding: 0
        margin: 0 0 40px 0
        max-width: 570px

        p
          margin: 0

    .img
      position: absolute !important
      top: 0
      left: 0
      width: 100%
      height: 100%
      @include overlay($black, .4, normal)

  .swiperNavigation
    position: absolute
    top: 360px
    left: 173px
    z-index: 99

    .prev,
    .next
      position: relative
      border: none
      background-color: transparent
      font-family: $oswald
      color: $white
      font-size: 18px
      line-height: 1
      text-transform: uppercase
      letter-spacing: 5.12px
      font-weight: 400
      padding: 0 15px
      cursor: pointer

      &::before
        content: ''
        display: block
        position: absolute
        top: 50%
        right: 0
        transform: translate(100%, -50%)
        width: 20px
        height: 20px
        background: url('../../../../static/assets/arrow_light.svg') center center / 20px no-repeat
        transition: .3s ease

    .next:hover::before
      transform: translate(120%, -50%)

    .prev
      margin-right: 30px

      &::before
        right: unset
        left: 0
        transform: translate(-100%, -50%) rotate(180deg)

      &:hover::before
        transform: translate(-120%, -50%) rotate(180deg)

  .ghostTitle
    position: absolute
    top: 370px
    left: 0
    font-size: 115px
    font-weight: 900
    line-height: 0
    color: $white
    z-index: 6
    opacity: .1
    mix-blend-mode: overlay
    user-select: none
    pointer-events: none

  .counterWrap
    position: absolute
    left: 160px
    top: 175px
    display: flex
    z-index: 10

    .currCount
      font-size: 80px
      font-family: $oswald
      font-weight: 400
      line-height: 1
      letter-spacing: 8px
      color: $main
      margin-right: 5px

    .allCount
      font-size: 20px
      font-family: $oswald
      font-weight: 300
      line-height: 1
      letter-spacing: 2px
      color: $gray2
      margin-top: -10px


@media screen and (max-width: 1599px)
  .header
    min-height: 720px

    .socials
      width: 285px
      height: 320px
      padding: 60px 34px

      &::before
        top: 120px
        left: 40px
        height: 45px
        width: 1px

      &.small
        width: 110px
        padding-bottom: 100px

        &::before
          bottom: 190px
          left: 50%
          transform: translateX(-50%)

        .socialIcon
          text-align: center

        .socialsTitle
          font-size: 10px
          letter-spacing: 11px
          transform: rotate(180deg) translateX(35%)
          margin-bottom: 73px

    .sliderWrap
      .sliderContent
        padding-top: 180px
        user-select: none

        .sliderTitle
          padding-left: 190px
          margin-right: -6px

    .swiperNavigation
      top: 283px
      left: 173px
      z-index: 99

    .ghostTitle
      top: 300px
      font-size: 100px

    .counterWrap
      left: 105px
      top: 135px

      .currCount
        font-size: 70px


@media screen and (max-width: 1199px)
  .header
    min-height: 680px
    .socials
      width: 225px
      height: 290px
      padding: 60px 23px

      &::before
        top: 90px
        left: 30px
        height: 45px
        width: 1px

      &.small
        width: 90px
        padding-bottom: 60px

        &::before
          bottom: 150px
          left: 50%
          transform: translateX(-50%)

    .headerWrap
      padding-top: 30vw

    .sliderWrap
      .sliderContent
        padding-top: 180px
        user-select: none

        .sliderTitle
          padding-left: 190px
          letter-spacing: 6px
          margin-bottom: 35px

    .swiperNavigation
      top: 235px
      left: 115px
      z-index: 99

      .next,
      .prev
        font-size: 16px

        &::before
          background-size: 18px

    .ghostTitle
      top: 290px
      font-size: 90px

    .counterWrap
      left: 80px
      top: 110px

      .currCount
        font-size: 60px

@media screen and (max-width: 767px)
  .header
    max-height: 100vh
    min-height: 650px

    .socials
      padding: 60px 13px
      width: 220px
      height: 280px

      &::before
        left: 21px

      &.small
        width: 70px
        padding-bottom: 30px

        &::before
          bottom: 125px

    .sliderWrap
      .sliderContent
        padding-top: 180px

        .sliderTitle
          padding-left: 0
          max-width: calc(100vw - 240px)

          *
            font-size: 25px !important

        .sliderDescription
          max-width: calc(100vw - 120px)

    .swiperNavigation
      top: 190px
      left: 100px
      z-index: 99

    .ghostTitle
      top: 200px
      font-size: 70px

    .counterWrap
      left: 75px
      top: 95px

      .currCount
        font-size: 50px

@media screen and (max-width: 599px)
  .header
    min-height: 650px

    .socials
      width: auto
      height: 140px
      padding: 14px

      &::before
        display: none

      .socialIcon
        font-size: 18px
        margin-top: 15px
        color: $gray2
        cursor: pointer

      &.small
        width: 60px
        padding-bottom: 30px

        &::before
          display: block
          bottom: 110px
          height: 40px

    .sliderWrap
      .sliderContent
        padding: 0
        max-width: calc(100vw - 90px)
        margin: 0

        .sliderTitle
          padding-left: 0
          max-width: 100%
          margin-bottom: 20px
          margin-right: 0

          *
            font-size: 25px !important
            letter-spacing: 3px

        .sliderDescription
          max-width: 100%
          margin-bottom: 20px

        .button
          padding: 12px 45px 12px 20px

          &::after
            right: 20px

    .swiperNavigation
      width: auto
      top: unset
      left: 50%
      transform: translateX(calc(-50% + 30px))
      bottom: 30px
      z-index: 99

      .prev
        margin-right: 5px

      .prev,
      .next
        font-size: 14px

    .ghostTitle
      top: 160px
      font-size: 50px

    .counterWrap
      flex-direction: column-reverse
      left: 15px
      top: 95px

      .currCount
        font-size: 30px
        letter-spacing: 2px

      .allCount
        font-size: 12px
        margin-bottom: 5px


@media screen and (max-width: 359px)
  .header
    min-height: 560px

    .socials
      &.small
        .socialsTitle
          font-size: 10px
          letter-spacing: 8px

    .sliderWrap
      .sliderContent
        .sliderTitle
          *
            font-size: 20px
            letter-spacing: 2px

    .swiperNavigation
      .prev
        margin-right: 0

      .prev,
      .next
        padding-right: 3px
        font-size: 12px

    .ghostTitle
      top: 130px

    .counterWrap
      top: 85px

